sandc/test/fixtures/astRegression/shouldFail/productions/tryPseudex/CatchBlockStatement.sand
pub class CatchBlockStatement {
    foo() {
        let a = try {
            b
        } catch e: Foo {
            foo();
        };
    }
}